<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_expenses"
            android:icon="@drawable/ic_taka"
            android:checked="true"
            android:title="@string/expenses" />
        <item
            android:id="@+id/nav_income"
            android:icon="@drawable/ic_add_black_24dp"
            android:title="@string/income" />
        <item
            android:id="@+id/nav_categories"
            android:icon="@drawable/ic_label_black_24dp"
            android:title="@string/categories" />
        <item
            android:id="@+id/nav_statistics"
            android:icon="@drawable/ic_trending_up_black_24dp"
            android:title="@string/statistics" />
    </group>
</menu>
