<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/linearLayout2"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal">

    <TextView
        android:id="@+id/tv_title"
        style="@style/ExpenseTrackerTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/add_new_expense"
        android:textSize="@dimen/text_size_20"
        card_view:layout_constraintBottom_toTopOf="@+id/btn_date"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_date"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:textColor="@color/primary_dark"

        android:textSize="@dimen/text_size_20"
        card_view:layout_constraintEnd_toEndOf="@+id/tv_title"
        card_view:layout_constraintStart_toStartOf="@+id/tv_title"
        card_view:layout_constraintTop_toBottomOf="@+id/tv_title" />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/health_holder"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/scan">

        <LinearLayout
            android:id="@+id/health"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="8"
            android:background="@drawable/boarder"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="UselessParent">

            <LinearLayout
                android:id="@+id/healthLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:overlapAnchor="false">

                <Spinner
                    android:id="@+id/sp_categories"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:foregroundGravity="center"
                    android:gravity="center"
                    android:spinnerMode="dropdown"
                    android:textColor="@color/accent" />

            </LinearLayout>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:background="@color/white"
            android:paddingLeft="3dp"
            android:paddingRight="3dp"
            android:text="Category"
            android:textColor="?android:textColorSecondary"
            app:layout_constraintBottom_toTopOf="@+id/health"
            app:layout_constraintStart_toStartOf="@+id/health"
            app:layout_constraintTop_toTopOf="@+id/health"
            tools:ignore="HardcodedText" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="16dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/health_holder">

        <EditText
            android:id="@+id/et_description"
            style="@style/ExpenseTrackerEditText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/optional_description"
            android:maxLines="3"
            android:textSize="20sp" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout2"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/textInputLayout">

        <EditText
            android:id="@+id/et_total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:hint="Amount"
            android:inputType="numberDecimal"
            android:singleLine="true"
            android:textSize="22sp"
            android:textStyle="bold" />
    </com.google.android.material.textfield.TextInputLayout>


    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_cancel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="10dp"
        android:gravity="center"
        android:text="@string/cancel"
        android:backgroundTint="@color/primary"
        android:textColor="#FFFFFF"
        card_view:layout_constraintEnd_toStartOf="@+id/btn_save"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/textInputLayout2" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_save"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:gravity="center"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        android:backgroundTint="@color/primary"
        card_view:layout_constraintBaseline_toBaselineOf="@+id/btn_cancel"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toEndOf="@+id/btn_cancel" />

    <Button
        android:id="@+id/scan"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:drawableTint="@color/white"
        android:textColor="@color/white"
        android:backgroundTint="@color/primary_dark"
        android:drawableLeft="@drawable/ic_photo_camera_black_24dp"
        card_view:icon="@drawable/ic_photo_camera_black_24dp"
        android:text="Scan Receipt"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toBottomOf="@+id/btn_date" />


</androidx.constraintlayout.widget.ConstraintLayout>